CB-10983 Move Experience delete flow step into clusters deletion flow